--- a/ui/diseno_profesor_copy.ui
+++ b/ui/diseno_profesor_copy.ui
@@ -432,7 +432,7 @@ QPushButton{
 }</string>
         </property>
         <property name="currentIndex">
-         <number>3</number>
+         <number>1</number>
         </property>
         <widget class="QWidget" name="page_home">
          <property name="styleSheet">
@@ -785,7 +785,7 @@ QPushButton{
              <string notr="true"/>
             </property>
             <property name="currentIndex">
-             <number>5</number>
+             <number>4</number>
             </property>
             <widget class="QWidget" name="materia_profesor">
              <widget class="QTableWidget" name="table_temas">
@@ -1484,8 +1484,8 @@ QPushButton{
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>164</width>
-                 <height>541</height>
+                 <width>651</width>
+                 <height>530</height>
                 </rect>
                </property>
                <layout class="QVBoxLayout" name="verticalLayout">
@@ -1671,6 +1671,78 @@ color: rgb(170, 0, 0);</string>
                  </layout>
                 </item>
                </layout>
+              </widget>
+             </widget>
+             <widget class="QFrame" name="frame_14">
+              <property name="geometry">
+               <rect>
+                <x>290</x>
+                <y>590</y>
+                <width>311</width>
+                <height>61</height>
+               </rect>
+              </property>
+              <property name="frameShape">
+               <enum>QFrame::StyledPanel</enum>
+              </property>
+              <property name="frameShadow">
+               <enum>QFrame::Raised</enum>
+              </property>
+              <widget class="QLabel" name="label_puntaje_2">
+               <property name="geometry">
+                <rect>
+                 <x>10</x>
+                 <y>20</y>
+                 <width>201</width>
+                 <height>21</height>
+                </rect>
+               </property>
+               <property name="font">
+                <font>
+                 <family>Inter</family>
+                 <pointsize>14</pointsize>
+                </font>
+               </property>
+               <property name="text">
+                <string>Puntaje de semejanza:</string>
+               </property>
+              </widget>
+              <widget class="QLabel" name="porcentaje_audio">
+               <property name="geometry">
+                <rect>
+                 <x>220</x>
+                 <y>20</y>
+                 <width>71</width>
+                 <height>21</height>
+                </rect>
+               </property>
+               <property name="font">
+                <font>
+                 <pointsize>14</pointsize>
+                </font>
+               </property>
+               <property name="text">
+                <string>%</string>
+               </property>
+              </widget>
+              <widget class="Line" name="line_5">
+               <property name="geometry">
+                <rect>
+                 <x>0</x>
+                 <y>50</y>
+                 <width>300</width>
+                 <height>4</height>
+                </rect>
+               </property>
+               <property name="styleSheet">
+                <string notr="true">background-color: rgb(217, 217, 217);</string>
+               </property>
+               <property name="lineWidth">
+                <number>1</number>
+               </property>
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
+               </property>
               </widget>
              </widget>
             </widget>
