--- a/ui/diseno_profesor_copy.ui
+++ b/ui/diseno_profesor_copy.ui
@@ -144,9 +144,9 @@ QLabel{
      <widget class="QLabel" name="label_userRole">
       <property name="geometry">
        <rect>
-        <x>40</x>
+        <x>30</x>
         <y>160</y>
-        <width>71</width>
+        <width>81</width>
         <height>20</height>
        </rect>
       </property>
@@ -368,98 +368,23 @@ QPushButton{
             <string>Bienvenido</string>
            </property>
           </widget>
-          <widget class="QFrame" name="frame_2">
-           <property name="geometry">
-            <rect>
-             <x>430</x>
-             <y>160</y>
-             <width>141</width>
-             <height>261</height>
-            </rect>
-           </property>
-           <property name="styleSheet">
-            <string notr="true">QFrame{	
-	background-color: rgb(232, 232, 232);
-	border-radius: 15px;
-}</string>
-           </property>
-           <property name="frameShape">
-            <enum>QFrame::StyledPanel</enum>
-           </property>
-           <property name="frameShadow">
-            <enum>QFrame::Raised</enum>
-           </property>
-           <widget class="QLabel" name="image_home_practicas">
-            <property name="geometry">
-             <rect>
-              <x>10</x>
-              <y>50</y>
-              <width>121</width>
-              <height>131</height>
-             </rect>
-            </property>
-            <property name="styleSheet">
-             <string notr="true"/>
-            </property>
-            <property name="text">
-             <string/>
-            </property>
-            <property name="pixmap">
-             <pixmap>../src/images/image_practic.jpg</pixmap>
-            </property>
-            <property name="scaledContents">
-             <bool>true</bool>
-            </property>
-           </widget>
-           <widget class="QLabel" name="label_home_practicas">
-            <property name="geometry">
-             <rect>
-              <x>40</x>
-              <y>10</y>
-              <width>61</width>
-              <height>16</height>
-             </rect>
-            </property>
-            <property name="font">
-             <font>
-              <family>Inter</family>
-              <pointsize>12</pointsize>
-             </font>
-            </property>
-            <property name="text">
-             <string>Prácticas</string>
-            </property>
-           </widget>
-           <widget class="QPushButton" name="button_home_practicas">
-            <property name="geometry">
-             <rect>
-              <x>30</x>
-              <y>220</y>
-              <width>75</width>
-              <height>23</height>
-             </rect>
-            </property>
-            <property name="styleSheet">
-             <string notr="true"/>
-            </property>
-            <property name="text">
-             <string>Ingresar</string>
-            </property>
-           </widget>
-          </widget>
           <widget class="QFrame" name="frame_3">
            <property name="geometry">
             <rect>
-             <x>100</x>
-             <y>160</y>
+             <x>430</x>
+             <y>150</y>
              <width>141</width>
              <height>261</height>
             </rect>
            </property>
            <property name="styleSheet">
             <string notr="true">QFrame{	
-	background-color: rgb(232, 232, 232);
+	background-color: rgb(38, 174, 249);
 	border-radius: 15px;
+	color: white;
+}
+QPushButton{
+	background-color: white;
 }</string>
            </property>
            <property name="frameShape">
@@ -526,89 +451,6 @@ QPushButton{
             </property>
            </widget>
           </widget>
-          <widget class="QFrame" name="frame_4">
-           <property name="geometry">
-            <rect>
-             <x>710</x>
-             <y>160</y>
-             <width>141</width>
-             <height>261</height>
-            </rect>
-           </property>
-           <property name="styleSheet">
-            <string notr="true">QFrame{	
-	background-color: rgb(232, 232, 232);
-	border-radius: 15px;
-}</string>
-           </property>
-           <property name="frameShape">
-            <enum>QFrame::StyledPanel</enum>
-           </property>
-           <property name="frameShadow">
-            <enum>QFrame::Raised</enum>
-           </property>
-           <widget class="QLabel" name="label_home_quiz">
-            <property name="geometry">
-             <rect>
-              <x>50</x>
-              <y>10</y>
-              <width>41</width>
-              <height>16</height>
-             </rect>
-            </property>
-            <property name="font">
-             <font>
-              <family>Inter</family>
-              <pointsize>12</pointsize>
-             </font>
-            </property>
-            <property name="text">
-             <string>Quiz</string>
-            </property>
-           </widget>
-           <widget class="QLabel" name="image_home_quiz">
-            <property name="geometry">
-             <rect>
-              <x>10</x>
-              <y>50</y>
-              <width>121</width>
-              <height>131</height>
-             </rect>
-            </property>
-            <property name="styleSheet">
-             <string notr="true"/>
-            </property>
-            <property name="text">
-             <string/>
-            </property>
-            <property name="pixmap">
-             <pixmap>../src/images/image_quiz.jpg</pixmap>
-            </property>
-            <property name="scaledContents">
-             <bool>true</bool>
-            </property>
-           </widget>
-           <widget class="QPushButton" name="button_home_quiz">
-            <property name="geometry">
-             <rect>
-              <x>30</x>
-              <y>220</y>
-              <width>75</width>
-              <height>23</height>
-             </rect>
-            </property>
-            <property name="styleSheet">
-             <string notr="true"/>
-            </property>
-            <property name="text">
-             <string>Ingresar</string>
-            </property>
-           </widget>
-          </widget>
-          <zorder>frame_2</zorder>
-          <zorder>label_home_title</zorder>
-          <zorder>frame_3</zorder>
-          <zorder>frame_4</zorder>
          </widget>
         </widget>
         <widget class="QWidget" name="page_teoria">
@@ -1693,8 +1535,8 @@ color: rgb(170, 0, 0);</string>
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>398</width>
-                 <height>498</height>
+                 <width>400</width>
+                 <height>500</height>
                 </rect>
                </property>
                <layout class="QVBoxLayout" name="verticalLayout_3">
